--- a/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormTramites.form
+++ b/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormTramites.form
@@ -110,7 +110,7 @@
             <Component class="javax.swing.JLabel" name="imgLogo">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="D:\Archivos de programa\GitHub\Proyectos\Repo\ASD\ProyectoAgenciaFiscal\AgenciaFiscalPresentacion\src\main\resources\multimedia\AgenciaFiscal.png"/>
+                  <Image iconType="3" name="/multimedia/AgenciaFiscal.png"/>
                 </Property>
               </Properties>
             </Component>
@@ -119,7 +119,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Comic Sans MS" size="36" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Agencia Fiscal"/>
+                <Property name="text" type="java.lang.String" value="Tramites"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="btnCerrar">
@@ -175,6 +175,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Placas"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPlacasActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnLicencias">
               <Properties>
